<?xml version="1.0" encoding="utf-8"?>
<!-- 	The MIT License (MIT)

Copyright (c) 2015 ETCHEMENDY ELORRI

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- the app name -->
    <string name="app_name" translatable="true">Football Scores</string>

    <!-- actions of the app -->
    <string name="action_settings" translatable="true">Settings</string>

    <!-- strings diplayed on the UI -->
    <!-- activities -->
    <string name="title_activity_about" translatable="true">About</string>
    
    <!-- tabs titles -->
    <string name="today" translatable="true">Today</string>
    <string name="yesterday" translatable="true">Yesterday</string>
    <string name="tomorrow" translatable="true">Tomorrow</string>
    

    
    <!-- string used only for developpement -->
    <string name="home_team_tool" translatable="false">Stoke City FC</string>
    <string name="away_team_tool" translatable="false">Norwish City FC</string>
    <string name="time_tool" translatable="false">20:45</string>
    <string name="matchday_tool" translatable="false">Matchday : 21</string>
    <string name="scores_tool" translatable="false">3 - 1</string>

    
    <!-- Teams -->
    <string name="team_arsenal_london" translatable="false">Arsenal London FC</string>
    <string name="team_manshester" translatable="false">Manchester United FC</string>
    <string name="team_swansea" translatable="false">Swansea City</string>
    <string name="team_leicester" translatable="false">Leicester City</string>
    <string name="team_everton" translatable="false">Everton FC</string>
    <string name="team_west_ham" translatable="false">West Ham United FC</string>
    <string name="team_tottenham" translatable="false">Tottenham Hotspur FC</string>
    <string name="team_west_bromwich" translatable="false">West Bromwich Albion</string>
    <string name="team_sunderland" translatable="false">Sunderland AFC</string>
    <string name="team_stoke_city" translatable="false">Stoke City FC</string>

    <!-- League names -->
    <string name="league_bundesliga1" translatable="false">Bundesliga 1</string>
    <string name="league_bundesliga2" translatable="false">Bundesliga 2</string>
    <string name="league_bundesliga3" translatable="false">Bundesliga 3</string>
    <string name="league_ligue1" translatable="false">Ligue 1</string>
    <string name="league_ligue2" translatable="false">Ligue 2</string>
    <string name="league_premier_league" translatable="false">Premier League</string>
    <string name="league_primera_division" translatable="false">Primera Division</string>
    <string name="league_segunda_division" translatable="false">Segunda Division</string>
    <string name="league_serie_a" translatable="false">Serie A</string>
    <string name="league_primeira_liga" translatable="false">Primeira Liga</string>
    <string name="league_eredivisie" translatable="false">Eredivisie</string>
    <string name="league_champions" translatable="false">UEFA Champions League</string>

    <string name="league_campeonato_brasileiro_da_serie_a" translatable="false">Campeonato Brasileiro da Série A</string>
    <string name="league_championship" translatable="false">Championship</string>
    <string name="league_ligue_one" translatable="false">Ligue One</string>
    <string name="league_ligue_two" translatable="false">Ligue Two</string>
    <string name="league_dfb_pokal" translatable="false">DFB-Pokal</string>
    <string name="league_serieB" translatable="false">Ligue Two</string>

    <string name="league_unknown" translatable="true">League not found.</string>

    <!-- Match day strings -->
    <string name="match_default">Matchday: <xliff:g id="num">%1$s</xliff:g></string>
    <string name="match_champions_gs" translatable="true">Group Stages, Matchday: 6</string>
    <string name="match_champions_fkr" translatable="true">First knockout round</string>
    <string name="match_champions_qf" translatable="true">Quarterfinals</string>
    <string name="match_champions_sf" translatable="true">Semifinals</string>
    <string name="match_champiions_f" translatable="true">Finals</string>

    <!-- Widget related -->
    <string name="title_widget_next_match" translatable="true">Next match</string>
    <string name="empty_widget_list" translatable="true">No matches today</string>
    <string name="title_widget_list" translatable="true">Today matches</string>


    <!-- Others -->
    <string name="scores">%1$s - %2$s</string>
    <string name="share_text" translatable="true">Share</string>
    <string name="about_text" translatable="true">
        This Application get Football Matches Score for the Premier League, Ligue1-2,
        Seria A,Bundesliga 1-2-3, Primera division, Segunda division,
        and the Eredivisie League.\n\n
        All Matches data are acquired from football-data.org free API. \n\n
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission
        from the owner.\n\n
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and this is the modified version I have made for the Udacity Android Nanodegree program.\n
    </string>


    <!-- strings used by the app but not displayed as is-->
    <!-- Key name for status stored in SharedPreferences -->
    <string name="pref_network_status_key" translatable="false">network_status</string>
    <string name="pref_football_api_status_key" translatable="false">football_api_status</string>
    <string name="pref_score_table_status_key" translatable="false">score_table_status</string>

    <!-- SyncAdapter related -->
    <!-- that the account is specific to our OpenBeeLabApp-->
    <string name="sync_account_type" translatable="false">footballscores.barqsoft</string>
    <!-- Uri authority for our content provider-->
    <string name="content_authority" translatable="false">barqsoft.footballscores</string>


    
    <!-- dummy data -->
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/000000\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"mDate\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/000000\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"mDate\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/000000\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"mDate\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/000000\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"mDate\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/000000\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"mDate\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>

    



    <!-- Empty scores listview -->
    <string name="no_scores_internet_off" translatable="true">Network error. Please check your connection.</string>
    <string name="no_scores_serveur_down" translatable="true">No scores information available. The server is
        not returning valid data.</string>
    <string name="no_scores_wrong_url_app_input" translatable="true">No scores information available. The server is not returning valid data. Please check for an updated version of FootballScores.</string>
    <string name="no_scores_table_status_unknown" translatable="true">Loading scores...</string>
    <string name="no_scores" translatable="true">No match found this day</string>

    

    <!-- Talkback content description -->
    <string name="home_team_crest" translatable="true">home team crest</string>
    <string name="away_team_crest" translatable="true">away team crest</string>


    <!-- Localisation related -->
    <string name="us_locale" translatable="false">en_US</string>
    <string name="fr_locale" translatable="false">fr_FR</string>
    <string name="ch_locale" translatable="false">zh_CN</string>
	
	<!-- API key -->
	<string name="api_key">498ae24a6ec1435db75bbd8ec5ede1ae</string>




</resources>
